# zerobounceindia-c-api-wrapper

./: .gitignore  CMakeLists.txt  README.md  README_es.md  documentation.md  documentation_es.md
include/ZeroBounce/: ZBActivityDataResponse.h  ZBCreditsResponse.h  ZBDeleteFileResponse.h  ZBErrorResponse.h  ZBFileStatusResponse.h  ZBFindEmailResponse.h  ZBGetApiUsageResponse.h  ZBGetFileResponse.h  ZBSendFileResponse.h  ZBValidateBatchResponse.h  ZBValidateResponse.h  ZBValidateStatus.h  ZBValidateSubStatus.h  ZeroBounce.h  utils.h
src/: ZBActivityDataResponse.c  ZBCreditsResponse.c  ZBDeleteFileResponse.c  ZBErrorResponse.c  ZBFileStatusResponse.c  ZBFindEmailResponse.c  ZBGetApiUsageResponse.c  ZBGetFileResponse.c  ZBSendFileResponse.c  ZBValidateBatchResponse.c  ZBValidateRespone.c  ZeroBounce.c  utils.c
test/: ZeroBounceTest.c
